--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
             width: 110px;
         }
 
-        video {
-            object-fit: cover;
+        video, canvas {
+            margin-left: 230px;
+            margin-top: 120px;
+            position: absolute;
         }
     </style>
 
