--- a/index.html
+++ b/index.html
@@ -99,6 +99,6 @@
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="js/main.js" async></script>
 
-<script src="../../../js/lib/ga.js"></script>
+<script src="js/ga.js"></script>
 </body>
 </html>
