--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
             width: 110px;
         }
 
-        video, canvas {
+         video{
+            margin-left: 230px;
+            margin-top: 120px;
+            position: absolute;
+        }
+        canvas{
             margin-left: 230px;
             margin-top: 120px;
             position: absolute;
