try move video and coment ga.js

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
         }
 
         video {
-            object-fit: cover;
+            margin-left: 230px;
+            margin-top: 120px;
+            position: absolute;
         }
     </style>
 
@@ -97,6 +99,6 @@
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="js/main.js" async></script>
 
-<script src="../../../js/lib/ga.js"></script>
+// <script src="../../../js/lib/ga.js"></script>
 </body>
 </html>
