Revert "try move video and coment ga.js"
This reverts commit f459b3b6ad5b2e099dc8ae97f6084f14ec8eae25.

--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
         }
 
         video {
-            margin-left: 230px;
-            margin-top: 120px;
-            position: absolute;
+            object-fit: cover;
         }
     </style>
 
@@ -99,6 +97,6 @@
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="js/main.js" async></script>
 
-// <script src="../../../js/lib/ga.js"></script>
+<script src="../../../js/lib/ga.js"></script>
 </body>
 </html>
