--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
         video {
             object-fit: cover;
         }
+        canvas {
+            object-fit: cover;
+        }
     </style>
 
 </head>
