--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <button id="snapshot">Take snapshot</button>
 
-    <canvas></canvas>
+    <canvas><canvas id="canvas" style="margin-left: 100px"></canvas> 
 
     <p>Draw a frame from the getUserMedia video stream onto the canvas element, then apply CSS filters.</p>
 
