canvas como el gacho de tamaño

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
             object-fit: cover;
         }
         canvas {
-            object-fit: cover;
+            margin-left: 230px;
+            margin-top: 120px;
+            position: absolute;
         }
     </style>
 
