--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
             object-fit: cover;
         }
         canvas {
-            margin-left: 230px;
-            margin-top: 120px;
-            position: absolute;
+            object-fit: cover;
         }
     </style>
 
