--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <button id="snapshot">Take snapshot</button>
 
-    <canvas><canvas id="canvas" width="320" height="240"></canvas> 
+    <canvas id="canvas" width="320" height="240"></canvas> 
 
     <p>Draw a frame from the getUserMedia video stream onto the canvas element, then apply CSS filters.</p>
 
@@ -102,6 +102,6 @@
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="js/main.js" async></script>
 
-// <script src="../../../js/lib/ga.js"></script>
+<!-- <script src="../../../js/ga.js"></script>    -->
 </body>
 </html>
