--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
 </head>
 
 <body>
+    
+<div class="slidecontainer">
+  <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+</div>
+    
 <div id="container">
 
     <h1><a href="//webrtc.github.io/samples/" title="WebRTC samples homepage">WebRTC samples</a> <span>getUserMedia + CSS filters</span>
