--- a/index.html
+++ b/index.html
@@ -57,8 +57,15 @@
             width: 110px;
         }
 
-        video {
-            object-fit: cover;
+        video{
+            margin-left: 230px;
+            margin-top: 120px;
+            position: absolute;
+        }
+        canvas{
+            margin-left: 230px;
+            margin-top: 120px;
+            position: absolute;
         }
         
     </style>
