--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <link rel="icon" sizes="192x192" href="../../../images/webrtc-icon-192x192.png">
     <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="../../../css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <style>
         .none {
@@ -33,8 +33,8 @@
         }
 
         .blur {
-            -webkit-filter: blur(var(--x)*0.1);
-            filter: blur(var(--x)*0.1);
+            -webkit-filter: blur(var(--x)*100);
+            filter: blur(var(--x)*100);
         }
 
         .grayscale {
@@ -68,8 +68,8 @@
   			filter: opacity(var(--x));
 		}
 		.hue-rotate {
-		  	-webkit-filter: hue-rotate(var(--x)*3.6);
-		  	filter: hue-rotate(var(--x)*3.6);
+		  	-webkit-filter: hue-rotate(var(--x)*360);
+		  	filter: hue-rotate(var(--x)*360);
 		}
 
         button#snapshot {
@@ -107,7 +107,7 @@
     </select>
 
     <button id="snapshot">Take snapshot</button>
-    <input type="range" id="myRange" value="0" min="0" max="10" step="0.1" onchange="handleSlider()" >
+    <input type="range" id="myRange" value="0" min="0" max="1" step="0.01" onchange="handleSlider()" >
     <script>
     function handleSlider () {
 	    var x = document.getElementById("myRange").value;
