--- a/index.html
+++ b/index.html
@@ -105,11 +105,18 @@
         <option value="opacity">Opacity</option>
         <option value="rotation">Rotation</option>
     </select>
+	<script>
+		var e = document.getElementById("elementId");
+		var value = e.options[e.selectedIndex].value;
+		if(value==6 || value==7){
+			document.getElementById("myRange").setProperty('max', 10);	
+		}
+	</script>
 
     <button id="snapshot">Take snapshot</button>
     <input type="range" id="myRange" value="0" min="0" max="1" step="0.01" onchange="handleSlider()" >
     <script>
-    function handleSlider () {
+    function handleSlider () {	    
 	    var x = document.getElementById("myRange").value;
 	    document.documentElement.style.setProperty('--x', x);
     }
