--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <option value="rotation">Rotation</option>
     </select>
 	<script>
-		var e = document.getElementById("elementId");
+		var e = document.getElementById("filter");
 		var value = e.options[e.selectedIndex].value;
 		if(value==6 || value==7){
 			document.getElementById("myRange").setProperty('max', 10);	
