--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         }
 
         .blur {
-            -webkit-filter: blur(var(--x)*100);
-            filter: blur(var(--x)*100);
+            -webkit-filter: blur(var(--x)*100px);		
+            filter: blur(var(--x)*100px);
         }
 
         .grayscale {
@@ -56,12 +56,12 @@
 		  	filter: brightness(var(--x));
 		}
 		.contrast {
-  			-webkit-filter: contrast(var(--x));
-  			filter: contrast(var(--x));
+  			-webkit-filter: contrast(var(--x)*20);
+  			filter: contrast(var(--x)*20);
 		}
 		.saturate {
-		  	-webkit-filter: saturate(var(--x));
-		  	filter: saturate(var(--x));
+		  	-webkit-filter: saturate(var(--x)*20);
+		  	filter: saturate(var(--x)*20);
 		}
         .opacity {
   			-webkit-filter: opacity(var(--x));
@@ -103,15 +103,7 @@
         <option value="contrast">Contrast</option>
         <option value="saturate">Saturate</option>
         <option value="opacity">Opacity</option>
-        <option value="rotation">Rotation</option>
     </select>
-	<script>
-		var e = document.getElementById("filter");
-		var value = e.options[e.selectedIndex].value;
-		if(value==6 || value==7){
-			document.getElementById("myRange").setProperty('max', 10);	
-		}
-	</script>
 
     <button id="snapshot">Take snapshot</button>
     <input type="range" id="myRange" value="0" min="0" max="1" step="0.01" onchange="handleSlider()" >
