--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         }
 
         .blur {
-            -webkit-filter: blur(var(--x)*100px);		
-            filter: blur(var(--x)*100px);
+            -webkit-filter: blur(3px);		
+            filter: blur(3px);
         }
 
         .grayscale {
@@ -56,14 +56,14 @@
 		  	filter: brightness(var(--x));
 		}
 		.contrast {
-  			-webkit-filter: contrast(var(--x)*20);
+  			-webkit-filter: contrast(var(--x)*100);
   			filter: contrast(var(--x)*20);
 		}
 		.saturate {
-		  	-webkit-filter: saturate(var(--x)*20);
+		  	-webkit-filter: saturate(var(--x)*100);
 		  	filter: saturate(var(--x)*20);
 		}
-        .opacity {
+        	.opacity {
   			-webkit-filter: opacity(var(--x));
   			filter: opacity(var(--x));
 		}
