--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 		  	filter: brightness(var(--x));
 		}
 		.contrast {
-  			-webkit-filter: contrast(var(--x)*100);
-  			filter: contrast(var(--x)*20);
+  			-webkit-filter: contrast(var(--x)+0.5);
+  			filter: contrast(var(--x)+0.5);
 		}
 		.saturate {
-		  	-webkit-filter: saturate(var(--x)*100);
-		  	filter: saturate(var(--x)*20);
+		  	-webkit-filter: saturate(var(--x)+0.5);
+		  	filter: saturate(var(--x)+0.5);
 		}
         	.opacity {
   			-webkit-filter: opacity(var(--x));
