--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         }
 
         .blur {
-            -webkit-filter: blur(3px);		
-            filter: blur(3px);
+            -webkit-filter: blur(calc(var(--value) * 0.1px));		
+            filter: blur(calc(var(--value) * 0.1px));
         }
 
         .grayscale {
