--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         }
 
         .blur {
-            -webkit-filter: blur(calc(var(--value) * 2px));		
-            filter: blur(calc(var(--value) * 2px));
+            -webkit-filter: blur(calc(var(--x) * 4px));		
+            filter: blur(calc(var(--x) * 4px));
         }
 
         .grayscale {
