--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         <option value="contrast">Contrast</option>
         <option value="saturate">Saturate</option>
         <option value="opacity">Opacity</option>
+	    <option value="hue-rotate">Rotate</option>
     </select>
 
     <button id="snapshot">Take snapshot</button>
